overflow fix

--- a/css/rashomon.css
+++ b/css/rashomon.css
@@ -523,6 +523,7 @@ a.but:hover {
     color: #333;
     padding-top: 3px;
     font-size: 12pt;
+    overflow: hide;
 }
 
 #controls {
